# helloword-tonic

./: Cargo.toml  build.rs  prometheus.yml
proto/: helloword.proto
src/: client.rs  lib.rs  server.rs
